notify on email change

--- a/app/views/user_mailer/password_updated.html.erb
+++ b/app/views/user_mailer/password_updated.html.erb
@@ -1,3 +1,3 @@
-<h1>Your password has been updated</h1>
-<p>Your ANRLeagues password has been updated.</p>
-<p>If you didn't change your password, please contact an admin immediately.</p>
+<h1>Your password has been changed</h1>
+<p>Your account password has been changed.</p>
+<p>If you didn't request this change, please <%= link_to "contact an admin", "#" %> immediately.</p>
