--- a/app/views/profile/new.html.erb
+++ b/app/views/profile/new.html.erb
@@ -29,6 +29,7 @@
             <%= f.label :password, "Password", class: "col-md-4 control-label" %>
             <div class="col-md-8">
               <%= f.password_field :password, placeholder:"", class: "form-control" %>
+              <small class="help-block">Passwords must contain at least one upper- and lower-case letter, and at least one number</small>
             </div>
           </div>
           <div class="form-group">
