--- a/app/views/leagues/edit.html.erb
+++ b/app/views/leagues/edit.html.erb
@@ -69,6 +69,7 @@
         </tbody>
       </table>
     </div>
+    <p class="text-right"><%= link_to '<i class="fa fa-envelope"></i> Send a Broadcast'.html_safe, broadcast_league_path(@league.id), class: "btn btn-primary" %></p>
   </div>
 </div>
 
