fix nearby map (minimum 1 mile radius); remove ads

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <link href='//fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Source+Serif+Pro:400,600' rel='stylesheet' type='text/css'>
 
-    <!-- ads -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <%# <!-- ads --> %>
+    <%# <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> %>
     
     <%# <!-- NetrunnerDB card integration --> %>
     <%# <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %1> %>
