--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -19,13 +19,13 @@
     <div class="text-center"><small><%= paginate(@leagues) %></small></div>
   </div>
   <div class="col-md-3">
-    <!-- Sidebar ad -->
-    <ins class="adsbygoogle"
-      style="display:inline-block;width:300px;height:600px"
-      data-ad-client="ca-pub-3773400329573214"
-      data-ad-slot="8391558557"></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <%# <!-- Sidebar ad --> %>
+    <%# <ins class="adsbygoogle" %>
+    <%#   style="display:inline-block;width:300px;height:600px" %>
+    <%#   data-ad-client="ca-pub-3773400329573214" %>
+    <%#   data-ad-slot="8391558557"></ins> %>
+    <%# <script> %>
+    <%#   (adsbygoogle = window.adsbygoogle || []).push({}); %>
+    <%# </script> %>
   </div>
 </div>
