--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,8 +222,24 @@ hr{
   }
 }
 
-iframe.map{
+
+// Maps
+.map-container{
   width:100%;
-  height:225px;
+  position:relative;
+  &.sixteen9{
+    padding-top:56.25%;
+  }
+  &.square{
+    padding-top:100%;
+  }
+  #map,.map{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
 }
+
 .gm-style-iw h3{ margin:10px 0; }
