--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -2,8 +2,8 @@
   <div class="col-md-3">
     <div class="list-group">
       <% unless params[:t] == "online" %>
-        <%= link_to "Nearby Leagues", "", class:"list-group-item" if params[:f].blank? %>
-        <%= link_to "Nearby Leagues", "", class:"list-group-item active" if params[:f] == "nearby" %>
+        <%= link_to "Nearby Leagues", nearby_leagues_path, class:"list-group-item" if params[:f].blank? %>
+        <%= link_to "Nearby Leagues", nearby_leagues_path, class:"list-group-item active" if params[:f] == "nearby" %>
       <% end %>
       <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
       <a href="#" class="list-group-item">Morbi leo risus</a>
