--- a/app/views/leagues/nearby.html.erb
+++ b/app/views/leagues/nearby.html.erb
@@ -1,10 +1,12 @@
 <h1>Nearby Leagues</h1>
 <div class="row">
+  <div class="col-md-8">
+    <div class="map-container square">
+      <div id="map"></div>
+    </div>
+  </div>
   <div class="col-md-4">
     <div id="nearby-leagues" class="list-unstyled"></div>
-  </div>
-  <div class="col-md-8">
-    <div id="map" style="width:100%; height:450px;"></div>
   </div>
 </div>
 
@@ -61,6 +63,9 @@ function searchMap(coordinates,map){
 }
 
 function addMarkers(markers){
+  if(markers.length == 0){
+    $('#nearby-leagues').html("<p><em>Nothing in range</em></p>");
+  }
   $(markers).each(function(i,m){
     marker_pos = new google.maps.LatLng(parseFloat(m["lat"]),parseFloat(m["lng"]));
     var infoWindow = new google.maps.InfoWindow({
