re-enable netrunnerdb integration

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,8 +7,8 @@
       <p>List of games from membership leagues?</p>
     <% end %>
 
-    <h3>TBD</h3>
-    <p>I don't know what to put here yet. Instructions for use?</p>
+    <h3>NetrunnerDB Integration Test</h3>
+    <p><%= link_to "Public Terminal", "https://netrunnerdb.com/en/card/05038" %></p>
 
   </div>
 
