nrdb resources over https if we're using https

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,6 @@
   </body>
 
     <!-- NetrunnerDB card integration -->
-    <%= stylesheet_link_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","http://netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %>
-    <%= javascript_include_tag "http://cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","http://cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","http://netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %>
+    <%= stylesheet_link_tag "//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.css","//netrunnerdb.com/bundles/netrunnerdbbuilder/css/icons.css" %>
+    <%= javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/qtip2/2.1.1/jquery.qtip.js","//cdnjs.cloudflare.com/ajax/libs/taffydb/2.7.2/taffy-min.js","//netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.data.js","//netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.format.js","//netrunnerdb.com/bundles/netrunnerdbbuilder/js/nrdb.tip.js" %>
 </html>
