--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -11,7 +11,7 @@
         <div class="col-sm-12">
           <div class="input-group">
             <%= f.number_field :corp_agenda_points, min:0, max:7, class: "form-control text-right" %>
-            <span class="input-group-addon"><i class="nr-agenda" title="Agenda Points"></i></span>
+            <span class="input-group-addon">Agenda Points</span>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
         <div class="col-sm-12">
           <div class="input-group">
             <%= f.number_field :runner_agenda_points, min:0, max:7, class: "form-control text-right", placholder: "Agenda Points" %>
-            <span class="input-group-addon"><i class="nr-agenda" title="Agenda Points"></i></span>
+            <span class="input-group-addon">Agenda Points</span>
           </div>
         </div>
       </div>
