--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,11 +7,8 @@
       <p>List of games from membership leagues?</p>
     <% end %>
 
-    <h3>NetrunnerDB Integration Test</h3>
+    <h3>NetrunnerDB API Test</h3>
     <p><%= link_to "Public Terminal", "https://netrunnerdb.com/en/card/05038" %></p>
-
-    <h4>https://netrunnerdb.com/api/card/05038</h4>
-    <code><%= @api_request %></code>
 
   </div>
 
