homepage games list; notification option for game results; use official nrdb stylesheets for icons

--- a/app/assets/stylesheets/netrunner.scss
+++ b/app/assets/stylesheets/netrunner.scss
@@ -1,178 +1,12 @@
-@font-face {
-    font-family: 'netrunner';
-    src:    font-url('netrunner.eot?y6hcdy');
-    src:    font-url('netrunner.eot?y6hcdy#iefix') format('embedded-opentype'),
-        font-url('netrunner.ttf?y6hcdy') format('truetype'),
-        font-url('netrunner.woff?y6hcdy') format('woff'),
-        font-url('netrunner.svg?y6hcdy#netrunner') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-.nr:before{
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'netrunner' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-//
-// Card icons
-//
-
-.nr-subroutine:before {
-    content: "\e900";
-}
-.nr-mu3:before {
-    content: "\e901";
-}
-.nr-mu2:before {
-    content: "\e902";
-}
-.nr-mu1:before {
-    content: "\e903";
-}
-.nr-mu:before {
-    content: "\e904";
-}
-.nr-trash:before {
-    content: "\e905";
-}
-.nr-link-half-top:before {
-    content: "\e906";
-}
-.nr-link-half-bottom:before {
-    content: "\e907";
-}
-.nr-link:before {
-    content: "\e908";
-}
-.nr-click:before {
-    content: "\e909";
-}
-.nr-recurring-credit:before {
-    content: "\e90a";
-}
-.nr-credit:before {
-    content: "\e90b";
-}
-
-//
-// Card Sets
-//
-
-.nr-core:before {
-    content: "\e914";
-}
-.nr-genesis:before {
-    content: "\e911";
-}
-.nr-creation-and-control:before {
-    content: "\e913";
-}
-.nr-spin:before {
-    content: "\e90c";
-}
-.nr-honor-and-profit:before {
-    content: "\e910";
-}
-.nr-lunar:before {
-    content: "\e90f";
-}
-.nr-order-and-chaos:before {
-    content: "\e90e";
-}
-.nr-sansan:before {
-    content: "\e90d";
-}
-.nr-data-and-destiny:before {
-    content: "\e912";
-}
-.nr-mumbad:before {
-    content: "\e91f";
-}
-
-//
-// Factions
-//
-
-.nr-anarch{
-  color:orangered;
-  &.icon:before {
-    content: "\e91a";
-  }
-}
-.nr-criminal{
-  color:royalblue;
-  &.icon:before {
-    content: "\e919";
-  }
-}
-.nr-shaper{
-  color:limegreen;
-  &.icon:before {
-    content: "\e91b";
-  }
-}
-.nr-jinteki{
-  color:crimson;
-  &.icon:before {
-    content: "\e916";
-  }
-}
-.nr-haas-bioroid{
-  color:blueviolet;
-  &.icon:before{
-    content: "\e918";
-  }
-}
-.nr-nbn{
-  color:darkorange;
-  &.icon:before {
-    content: "\e915";
-  }
-}
-.nr-weyland-consortium{
-  color:darkgreen;
-  &.icon:before{
-    content: "\e917";
-  }
-}
-
-.nr-adam,
-.nr-apex,
-.nr-sunny-lebeau{
-  color:#555;
-}
-
-.nr-adam{
-  &.icon:before{
-    content: "\e91d";
-  }
-}
-.nr-apex{
-  &.icon:before{
-    content: "\e91e";
-  }
-}
-.nr-sunny-lebeau{
-  &.icon:before{
-    content: "\e91c";
-  }
-}
-
-.nr-neutral{
-  color:#555;
-  &.icon:before{
-    // Link icon
-    //content: "\e908";
-  }
-}
+// Side colours
+.runner{ color:red; }
+.corp{ color: blue; }
+// Factions colours
+.anarch{ color:orangered; }
+.criminal{ color:royalblue; }
+.shaper{ color:limegreen; }
+.jinteki{ color:crimson; }
+.haas-bioroid{ color:blueviolet; }
+.nbn{ color:darkorange; }
+.weyland-consortium{ color:darkgreen; } 
+.adam,.apex,.sunny-lebeau,.neutral{ color:#555; }
