--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <%# <!-- ads --> %>
     <%# <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> %>
     
+    <%= stylesheet_link_tag '//netrunnerdb.com/bundles/netrunnerdbbuilder/netrunnerfont.css', media: 'all' %>
 
     <%= render partial: "shared/ga" if Rails.env == "production" %>
 
