--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -1,3 +1,14 @@
+<% if league.errors.any? %>
+  <div class="alert alert-danger">
+    <h4>The following error(s) were found</h4>
+    <ul>
+      <% league.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
   <div class="form-group">
     <%= f.label :display_name, "League name", class: "col-md-4 control-label" %>
     <div class="col-md-8">
