--- a/app/views/profile/edit.html.erb
+++ b/app/views/profile/edit.html.erb
@@ -37,6 +37,14 @@
         <div class="form-group">
           <div class="col-md-8 col-md-offset-4">
             <label class="checkbox" style="font-weight:normal;">
+              <%= f.check_box :notify_game_result %>
+              <strong data-toggle="popover" data-content="Emails sent when a game you're a player in has its result saved">Game Results</strong>
+            </label>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-md-8 col-md-offset-4">
+            <label class="checkbox" style="font-weight:normal;">
               <%= f.check_box :notify_league_broadcast %>
               <strong data-toggle="popover" data-content="Messages sent by organizers to a league's members">League broadcasts</strong>
             </label>
