--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -5,7 +5,7 @@
         <span class="sr-only">Collapse Navbar</span>
         <i class="fa fa-list"></i>
       </button>
-      <%= link_to "#{'<i class="nr nr-spin"></i>'} #{SITE_NAME}".html_safe, root_path, class: "navbar-brand" %>
+      <%= link_to "#{'<i class="icon icon-spin"></i>'} #{SITE_NAME}".html_safe, root_path, class: "navbar-brand" %>
     </div>
 
     <div class="collapse navbar-collapse" id="headerMenu">
