--- a/app/views/seasons/_user_games.html.erb
+++ b/app/views/seasons/_user_games.html.erb
@@ -9,38 +9,7 @@
     </thead>
     <tbody>
     <% games.each do |game| %>
-      <tr<% if game.has_player?(current_user.id) %> class="<%= result_row(game.result_for_player(current_user.id)) %>"<% end %>>
-        <td>
-          <div class="pull-left" style="padding-right:10px;">
-            <%= gravatar(game.corp_player.email,40) %>
-          </div>
-          <%= link_to game.corp_player.display_name, show_profile_path(game.corp_player.id, game.corp_player.slug) %>
-          <% unless game.corp_identity_id.blank? %><br /><small><%= player_identity(game.corp_identity,"Corp") %></small><% end %>
-        </td>
-        <td>
-          <div class="pull-left" style="padding-right:10px;">
-            <%= gravatar(game.runner_player.email,40) %>
-          </div>
-          <%= link_to game.runner_player.display_name, show_profile_path(game.runner_player.id, game.runner_player.slug) %>
-          <% unless game.runner_identity_id.blank? %><br /><small><%= player_identity(game.runner_identity,"Runner") %></small><% end %>
-        </td>
-        <td>
-          <% if game.unplayed? %>
-            <% if game.has_player?(current_user.id) %>
-            <%= link_to 'Update'.html_safe, "javascript:void(0);", class:"btn btn-default btn-xs", "data-action":"gameResult", "data-game-id":game.id, "data-season-id":game.season_id, "data-league-id":game.league_id %>
-            <%# <%= link_to 'Submit result'.html_safe, edit_league_season_game_path(game.league_id,game.season_id,game.id), class:"btn btn-default btn-xs" %1> %>
-            <% else %>
-              <em>Upcoming</em>
-            <% end %>
-          <% else %>
-            <% if game.has_player?(current_user.id) %>
-              <%= game.result_for_player(current_user.id) %>
-            <% else %>
-              <%= game.result.display_name %>
-            <% end %>
-          <% end %>
-        </td>
-      </tr>
+      <%= render partial: "games/table_row", locals: { game: game } %>
     <% end %>
   </tbody>
 </table>
