--- a/app/views/games/_table_row.html.erb
+++ b/app/views/games/_table_row.html.erb
@@ -1,9 +1,10 @@
-      <tr<% if game.has_player?(current_user.id) %> class="<%= result_row(game.result_for_player(current_user.id)) %>"<% end %>>
+      <tr<% if logged_in? && game.has_player?(current_user) %> class="<%= result_row(game.result_for_player(current_user)) %>"<% end %>>
         <td>
           <div class="pull-left" style="padding-right:10px;">
             <%= gravatar(game.corp_player.email,40) %>
           </div>
           <%= link_to game.corp_player.display_name, show_profile_path(game.corp_player.id, game.corp_player.slug) %>
+          <% if game.corp_win? %><strong>Winner</strong><% end %>
           <% unless game.corp_identity_id.blank? %><br /><small><%= player_identity(game.corp_identity,"Corp") %></small><% end %>
         </td>
         <td>
@@ -11,22 +12,18 @@
             <%= gravatar(game.runner_player.email,40) %>
           </div>
           <%= link_to game.runner_player.display_name, show_profile_path(game.runner_player.id, game.runner_player.slug) %>
+          <% if game.runner_win? %><strong>Winner</strong><% end %>
           <% unless game.runner_identity_id.blank? %><br /><small><%= player_identity(game.runner_identity,"Runner") %></small><% end %>
         </td>
         <td>
           <% if game.unplayed? %>
-            <% if game.has_player?(current_user.id) %>
-            <%= link_to 'Update'.html_safe, "javascript:void(0);", class:"btn btn-default btn-xs", "data-action":"gameResult", "data-game-id":game.id, "data-season-id":game.season_id, "data-league-id":game.league_id %>
-            <%# <%= link_to 'Submit result'.html_safe, edit_league_season_game_path(game.league_id,game.season_id,game.id), class:"btn btn-default btn-xs" %1> %>
+            <% if logged_in? && game.user_can_update?(current_user) %>
+              <%= link_to 'Update'.html_safe, "javascript:void(0);", class:"btn btn-default btn-xs", "data-action":"gameResult", "data-game-id":game.id, "data-season-id":game.season_id, "data-league-id":game.league_id %>
             <% else %>
               <em>Upcoming</em>
             <% end %>
           <% else %>
-            <% if game.has_player?(current_user.id) %>
-              <%= game.result_for_player(current_user.id) %>
-            <% else %>
-              <%= game.result.display_name %>
-            <% end %>
+            <%= game.result.display_name %>
           <% end %>
         </td>
       </tr>
