--- a/app/views/leagues/index.html.erb
+++ b/app/views/leagues/index.html.erb
@@ -1,31 +1,15 @@
+    <h1>Leagues</h1>
 <div class="row">
-  <%# <div class="col-md-3"> %>
-  <%#   <div class="list-group"> %>
-  <%#     <% unless params[:t] == "online" %1> %>
-  <%#       <%= link_to "Nearby Leagues", nearby_leagues_path, class:"list-group-item" if params[:f].blank? %1> %>
-  <%#       <%= link_to "Nearby Leagues", nearby_leagues_path, class:"list-group-item active" if params[:f] == "nearby" %1> %>
-  <%#     <% end %1> %>
-  <%#     <a href="#" class="list-group-item">Dapibus ac facilisis in</a> %>
-  <%#     <a href="#" class="list-group-item">Morbi leo risus</a> %>
-  <%#     <a href="#" class="list-group-item">Porta ac consectetur ac</a> %>
-  <%#     <a href="#" class="list-group-item">Vestibulum at eros</a> %>
-  <%#   </div> %>
-  <%# </div> %>
-  <div class="col-md-9">
-    <h2>Leagues</h2>
+  <div class="col-md-3">
+    <%= render partial: "leagues/sidebar", locals: {} %>
+  </div>
+  <div class="col-md-6">
     <% @leagues.each do |league| %>
       <%= render partial: "leagues/short", locals: { league: league } %>
     <% end %>
     <div class="text-center"><small><%= paginate(@leagues) %></small></div>
   </div>
   <div class="col-md-3">
-    <%# <!-- Sidebar ad --> %>
-    <%# <ins class="adsbygoogle" %>
-    <%#   style="display:inline-block;width:300px;height:600px" %>
-    <%#   data-ad-client="ca-pub-3773400329573214" %>
-    <%#   data-ad-slot="8391558557"></ins> %>
-    <%# <script> %>
-    <%#   (adsbygoogle = window.adsbygoogle || []).push({}); %>
-    <%# </script> %>
+    <%= render partial: "shared/ads", locals: {} %>
   </div>
 </div>
