--- a/app/views/leagues/_short.html.erb
+++ b/app/views/leagues/_short.html.erb
@@ -1,4 +1,4 @@
 <% user ||= current_user %>
 <%= render partial: "leagues/mini", locals: { league: league, user: user } %>
-<p><%= league.description_html.html_safe %></p>
+<% unless league.description_html.blank? %><p><%= league.description_html.html_safe %></p><% end %>
 <hr />
