--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -31,7 +31,7 @@
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button">
-            <i class="fa fa-user"></i> <% if logged_in? %><span class="visible-xs-inline"><%= current_user.display_name %></span> <% end %><i class="fa fa-caret-down"></i>
+            <i class="fa fa-user"></i> <span class="visible-xs-inline"><% if logged_in? %><%= current_user.display_name %><% else %>Account<% end %></span> <i class="fa fa-caret-down"></i>
           </a>
           <ul class="dropdown-menu">
             <% if logged_in? %>
