promotion and demotion of league members/officers; display a player's current position in a league when viewing their profile;change owner/officer/member icons

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -200,12 +200,12 @@ hr{
 
 .league-officer{
   font-size:0.8em;
-  color:#C00;
+  color:crimson;
 }
 
 .league-member{
   font-size:0.8em;
-  color:#FC0;
+  color:limegreen;
 }
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus{
