--- a/app/views/seasons/show.html.erb
+++ b/app/views/seasons/show.html.erb
@@ -1,21 +1,1 @@
-<ul class="breadcrumb">
-  <li><%= link_to "Leagues", leagues_path %></li>
-  <li><%= link_to @league.display_name, league_path(@league.id,@league.slug) %></li>
-  <li class="active"><%= @season.display_name %></li>
-</ul>
-
-<h1><%= @league.display_name %> &ndash; <%= @season.display_name %></h1>
-
-<% if logged_in? %>
-  <% if @league.user_can_edit?(current_user.id) %>
-    <p>Edit tools</p>
-  <% end %>
-<% else %>
-  <p>Sign up?</p>
-<% end %>
-
-<% unless @season.league_table.blank? %>
-  <code><%= @season.table %></code>
-<% else %>
-  <p>League table blank</p>
-<% end %>
+<h1>SeasonsController#show</h1>
