--- a/app/views/leagues/_form.html.erb
+++ b/app/views/leagues/_form.html.erb
@@ -1,3 +1,4 @@
+<% disabled = disabled.nil? ? false : disabled %>
 <% if league.errors.any? %>
   <div class="alert alert-danger">
     <h4>The following error(s) were found</h4>
@@ -12,42 +13,42 @@
   <div class="form-group">
     <%= f.label :display_name, "League name", class: "col-md-4 control-label" %>
     <div class="col-md-8">
-      <%= f.text_field :display_name, class: "form-control" %>
+      <%= f.text_field :display_name, class: "form-control", disabled: disabled %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :privacy, "Memberships", class: "col-md-4 control-label" %>
     <div class="col-md-8">
-      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "open" %> <strong>Public</strong> &ndash; Anyone can join</label>
-      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "closed" %> <strong>Private</strong> &ndash; Requests must be approved</label>
-      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "invitational" %> <strong>Invitational</strong> &ndash; Players must be invited</label>
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "open", disabled: disabled %> <strong>Public</strong> &ndash; Anyone can join</label>
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "closed", disabled: disabled %> <strong>Private</strong> &ndash; Requests must be approved</label>
+      <label class="checkbox" style="font-weight:normal;"><%= f.radio_button :privacy, "invitational", disabled: disabled %> <strong>Invitational</strong> &ndash; Players must be invited</label>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :table_privacy, "League table", class: "col-md-4 control-label" %>
     <div class="col-md-8">
-      <%= f.select :table_privacy, options_for_select([["Public - visible to everyone","public"],["Private - visible only to members","private"]], league.table_privacy), {}, { class: "form-control" } %>
+      <%= f.select :table_privacy, options_for_select([["Public - visible to everyone","public"],["Private - visible only to members","private"]], league.table_privacy), {}, { class: "form-control", disabled: disabled } %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :location_type, "Location", class: "col-md-4 control-label" %>
     <div class="col-md-3">
-      <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]], league.location_type), {}, { id:"type-select", class: "form-control" } %>
+      <%= f.select :location_type, options_for_select([["Offline","offline"],["Online","online"]], league.location_type), {}, { id:"type-select", class: "form-control", disabled: disabled } %>
     </div>
     <div class="col-md-5">
       <div class="location-select offline">
-        <%= text_field_tag :lookup_address, league.latlong, id: "lookup-address", class: "form-control" %>
+        <%= text_field_tag :lookup_address, league.latlong, id: "lookup-address", class: "form-control", disabled: disabled %>
       </div>
       <div class="location-select online">
-        <%= f.text_field :online_location, placeholder: "http://...", class: "form-control" %>
+        <%= f.text_field :online_location, placeholder: "http://...", class: "form-control", disabled: disabled %>
       </div>
     </div>
   </div>
   <div class="form-group location-select offline">
     <div class="col-md-8 col-md-offset-4">
       <div class="location-select offline">
-        <%= f.hidden_field :latitude %>
-        <%= f.hidden_field :longitude %>
+        <%= f.hidden_field :latitude unless disabled %>
+        <%= f.hidden_field :longitude unless disabled %>
         <div id="map-picker" style="width:100%; height: 200px;"></div>
         <small class="help-block">Click and drag the marker for precise position</small>
       </div>
@@ -57,7 +58,7 @@
   <div class="form-group">
     <%= f.label :description, "Description", class: "col-md-4 control-label" %>
     <div class="col-md-8">
-      <%= f.text_area :description_markdown, class: "form-control", placeholder: "Provide information about day/time of offline group meetings, specific directions to location", rows: 12, maxlength:500 %>
+      <%= f.text_area :description_markdown, class: "form-control", placeholder: "Provide information about day/time of offline group meetings, specific directions to location", rows: 12, maxlength:500, disabled: disabled %>
       <small class="help-block">Accepts <a href="https://daringfireball.net/projects/markdown/dingus" target="_blank">markdown</a>. Maximum of 500 characters.</small>
     </div>
   </div>
@@ -72,7 +73,7 @@
 
   <div class="form-group">
     <div class="col-md-8 col-md-offset-4">
-      <%= f.submit "Save", class: "btn btn-success" %>
+      <%= f.submit "Save", class: "btn btn-success", disabled: disabled %>
     </div>
   </div>
 
