--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -14,10 +14,10 @@
 <p>Not sure what other profile information should go here</p>
 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <h3>League Memberships</h3>
-    <% if @user.leagues.any? %>
-      <% @user.leagues.each do |league| %>
+    <% if @memberships.any? %>
+      <% @memberships.each do |league| %>
         <%= render partial: "leagues/mini", locals: { league: league, user: @user } %>
       <% end %>
     <% else %>
