--- a/app/views/seasons/_form.html.erb
+++ b/app/views/seasons/_form.html.erb
@@ -4,7 +4,7 @@
     <div class="col-md-12">
       <div class="input-group">
         <%= f.text_field :display_name, class: "form-control", placeholder: "Display name" %>
-        <span class="input-group-btn"><%= f.submit "Create League", class: "btn btn-success" %></span>
+        <span class="input-group-btn"><%= f.submit "Create season", class: "btn btn-success" %></span>
       </div>
     </div>
   </div>
